Fix Map.of in Java8